# clinical-recruitment

./: .env.example  .gitattributes  .gitignore  Blog.md  Dockerfile  FINAL.md  HUGGINGFACE_BLOG.md  LICENSE  README.md  TRAINING_LEARNINGS.md  app.py  client.py  deploy.py  env.py  graders.py  inference.py  load_traces.py  models.py  openenv.yaml  openenv_adapter.py  pyproject.toml  redeploy.py  requirements-research.txt  requirements.txt  test_agents.py  test_api.py  test_env.py  test_live.py  test_local_serving.py  test_research_modules.py  tool_env.py  train.py  train_dual_gpu.py  train_final.py  train_h200.py  validate.py
archive/: SCRATCHPAD.md  custom_gradio_ui.py  eval_logs.txt  lightning_job_logs.txt
autoresearch/: README.md  evaluate.py  program.md  results.tsv  run_autoresearch.py
data/: ablation_features.csv  ablation_horizon.csv  leaderboard.csv  pareto_summary.csv  progressive_runs.csv  progressive_summary.csv  reproducibility.csv  research_runs.csv  research_summary.csv
demo/: 5_step_demo.py  before_after_trajectories.json  training_demo.py
docs/: HUGGINGFACE_BLOG.md  PITCH_OUTLINE.md  TRAINING_LEARNINGS.md  appendix_report.md  architecture.excalidraw  model_card_README.md  research.md  theme2_alignment.md  theme2_completion_checklist.md
experiments/: __init__.py  ablate_features.py  ablate_horizon.py  appendix_report.py  full_sweep.py  grpo_metrics.json  pareto_report.py  reproducibility.py  run_progressive_training.py  run_research.py  train_agents.py  train_offline_policy.py
kaggle_dataset/: dataset-metadata.json
notebooks/: training_trl.ipynb  (+3 more)
(+162 files in other folders)
